# heidelberg

./: .gitignore  README.md  pyproject.toml  requirements_colab.txt
notebooks/: TD.ipynb  TD_test.ipynb  Untitled.ipynb  cell_detection.ipynb  dinobloom_test.ipynb
src/: custom_dataset.py  embedding_evaluation.py  model_information.py  net.py  training.py  umap_tsne.py
src/heidelberg/: __init__.py  attn.py  embedding_dataset.py
