[project]
name = "heidelberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "etienneguevel", email = "etienneguev@gmail.com" }
]
requires-python = ">=3.10,<=3.11"
dependencies = [
    "cython>=3.1.2",
    "ipykernel>=6.29.5",
    "medmnist>=3.0.2",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.5.3.2",
    "nvidia-cuda-cupti-cu12==12.5.82",
    "nvidia-cuda-nvrtc-cu12==12.5.82",
    "nvidia-cuda-runtime-cu12==12.5.82",
    "nvidia-cudnn-cu12==9.3.0.75",
    "nvidia-cufft-cu12==11.2.3.61",
    "nvidia-curand-cu12==10.3.6.82",
    "nvidia-cusolver-cu12==11.6.3.83",
    "nvidia-cusparse-cu12==12.5.1.3",
    "nvidia-nvjitlink-cu12==12.5.82",
    "python-bioformats>=4.1.0",
    "python-javabridge",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch==2.6.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.2.40",
    "umap-learn>=0.5.7",
    "wheel>=0.45.1",
]

[project.scripts]
heidelberg = "heidelberg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
python-javabridge = { git = "https://github.com/CellProfiler/python-javabridge.git" }
