[project]
name = "heidelberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "etienneguevel", email = "etienneguev@gmail.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "cython>=3.1.2",
    "dill>=0.4.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "medmnist>=3.0.2",
    "numpy==1.26.4",
    "python-bioformats>=4.1.0",
    "python-javabridge",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch==2.6.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.2.40",
    "umap-learn>=0.5.7",
    "wheel>=0.45.1",
]

[project.scripts]
heidelberg = "heidelberg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
python-javabridge = { git = "https://github.com/CellProfiler/python-javabridge.git" }
ultralytics = { git = "https://github.com/ultralytics/ultralytics.git" }
